# Grilnica

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  categories.py  pages.py  products.py
app/core/: config.py  security.py
app/db/: session.py
app/frontend/templates/: base.html  combo.html  login.html  product-detail.html  profile.html  qual.html
app/frontend/templates/menu/: category.html  product_detail.html
app/models/: __init__.py  cart.py  category.py  city.py  legal_entity.py  order.py  product.py  promo.py  restaurant.py  support_ticket.py  user.py  user_address.py
app/repositories/: base.py  category_repository.py  product_repository.py  user.py
app/schemas/: category.py  product.py  user.py
app/services/: auth.py  category_service.py  product_service.py
app/templates/: actions.html  basket.html  login.html
scripts/: clear_db.py  init_db.sh  seed_combo.py
templates/: base.html  combo.html  index.html  product-detail.html  profile.html  restorans.html
